--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-share": "^4.4.1",
     "react-web-share": "^2.0.2",
+    "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
